--- a/React Props/Basics/index.html
+++ b/React Props/Basics/index.html
@@ -18,8 +18,8 @@
 
     <script src="https://unpkg.com/babel-standalone"></script>
 
-
-    <script src="app.js" type="text/jsx"></script>
+    <script src="hello.js" type="text/jsx"></script>
+    <script src="index.js" type="text/jsx"></script>
 
     </script>
 </body>
